<resources>
    <string name="app_name">SynApps</string>

    <string name="action_settings">Settings</string>
    <string name="SynApps">Welcome to \nSynApps!</string>
    <string name="notifications">Notifications</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="wifidirect">Wifi-Direct</string>
    <string name="connectivity">Connectivity</string>
    <string name="myconnectivity">My Connectivity</string>
    <string name="updates">Updates</string>
    <string name="last_data_update">Last Data Update:\n21/03/2016</string>
    <string name="clear_data">Clear Data</string>
    <string name="network_details">Network Details</string>
    <string name="generate_graph">Generate Graph</string>
    <string name="popup_name_text">A device having the following MAC address has been detected. Do you wish to name it?\n</string>
    <string name="mac_address">MAC Address: </string>
    <string name="name_optionnal">Name (optional)</string>
    <string name="phone_optionnal">Phone Number (optional)</string>
    <string name="ok">OK</string>
    <string name="ignore">Ignore</string>
    <string name="popup_clear_data">Are you sure you want to clear all the network data on this device?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="title_activity_network_details">Network Details</string>
    <string name="mobile_data">Mobile Data</string>
    <string name="action_connectivity_state">Connectivity State</string>
    <string name="bluetooth_state">Bluetooth State: </string>
    <string name="wifi_state">Wifi State: </string>
    <string name="cell_state">Cellular Network: </string>
    <string name="phone_nb">Phone Number: </string>
    <string name="unknown">Unknown</string>


    <string name="title_activity_connectivity__state">Connectivity State</string>
    <string name="title_activity_server">Server</string>

    <string name="hello_world">Hello world!</string>
    <string name="detection_frequency">Detection Frequency:</string>
    <string name="cumulative_time">Cumulative Time:</string>
    <string name="last_time_detected">Last Time Detected:</string>
    <string name="last_detection_range">Last Detection Duration:</string>
    <string name="phone_number">Phone Number:</string>
    <string name="sort_data_by">Sort Data By:</string>
    <string name="longitude">Longitude:</string>
    <string name="battery_level">Battery Level:</string>
    <string name="to_date">To Date</string>
    <string name="from_date">From Date</string>
    <string name="from_time">From Time</string>
    <string name="to_time">To Time</string>
    <string name="generate">New Button</string>

    <string-array name="spinner_sorting_choice">
        <item>First Detection Time</item>
        <item>Last Detection Time</item>
        <item>Device Name</item>
        <item>Detection Frequency</item>
        <item>Cumulative Detection Time</item>
        <item>Last Detection Duration</item>
    </string-array>

    <string-array name="spinner_display_choice">
        <item>Show All</item>
        <item>Date/Time Range</item>
        <item>Device</item>
        <item>Location</item>
        <item>Battery Life</item>
    </string-array>
</resources>
