    <android.support.v4.widget.DrawerLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:id="@+id/content_frame"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/Title"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="60dp"
                android:text="@string/SynApps"
                android:textStyle="bold"
                android:textSize="40sp"
                android:textColor="@color/myBlue"
                android:gravity="center_horizontal" />

            <Button
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:text="@string/network_details"
                android:id="@+id/network_details_button"
                android:layout_below="@+id/connectivity_button"
                android:layout_centerHorizontal="true"
                android:onClick="onNetworkDetailsClick"
                android:background="@color/myBlue"
                android:textColor="@color/myWhite"
                android:layout_marginTop="50dp"
                android:textSize="20sp"
                android:outlineProvider="paddedBounds" />

            <Button
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:text="@string/generate_graph"
                android:id="@+id/generate_graph_button"
                android:layout_below="@+id/network_details_button"
                android:layout_centerHorizontal="true"
                android:onClick="onGenerateGraphClick"
                android:background="@color/myBlue"
                android:textColor="@color/myWhite"
                android:layout_marginTop="50dp"
                android:textSize="20sp"
                android:outlineProvider="paddedBounds" />

            <Button
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:text="@string/myconnectivity"
                android:id="@+id/connectivity_button"
                android:layout_below="@+id/Title"
                android:layout_centerHorizontal="true"
                android:onClick="onConnectivityClick"
                android:background="@color/myBlue"
                android:textColor="@color/myWhite"
                android:layout_marginTop="50dp"
                android:textSize="20sp"
                android:outlineProvider="paddedBounds" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/left_drawer"
            android:layout_width="220dp"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:orientation="vertical"
            android:background="@color/myWhite">


            <Switch
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/notifications"
                android:id="@+id/notif_switch"
                android:textColor="@color/myBlue"
                android:textSize="20sp"
                android:layout_below="@+id/updates_textview"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="25dp"
                android:textStyle="bold" />

            <Switch
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/bluetooth"
                android:id="@+id/bluetooth_switch"
                android:textColor="@color/myBlue"
                android:textSize="20sp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="5dp"
                android:layout_below="@+id/connectivity_textview"
                android:textStyle="bold" />

            <Switch
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/wifidirect"
                android:id="@+id/wifi_switch"
                android:textColor="@color/myBlue"
                android:textSize="20sp"
                android:layout_below="@+id/bluetooth_switch"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="5dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/connectivity"
                android:id="@+id/connectivity_textview"
                android:textColor="@color/myBlue"
                android:textSize="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="15dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/updates"
                android:id="@+id/updates_textview"
                android:textColor="@color/myBlue"
                android:textSize="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:layout_below="@+id/wifi_switch" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last_data_update"
                android:id="@+id/last_data_update"
                android:textColor="@color/myBlue"
                android:layout_above="@+id/clear_data"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="15dp"
                android:textSize="18dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clear_data"
                android:id="@+id/clear_data"
                android:textColor="@color/myBlue"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:textSize="18dp"
                android:onClick="onClickClearData" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/popup_name"
            android:background="#DDDDDD"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="120dp"
            android:layout_marginBottom="120dp"
            android:visibility="gone"
            android:transitionGroup="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/popup_name_text"
                android:id="@+id/popup_name_text"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textColor="@color/myBlue"
                android:textSize="16dp"
                android:gravity="center|center_horizontal" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/popup_editText"
                android:hint="@string/name_optionnal"
                android:layout_below="@+id/mac_address_textview"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editText_phone"
                android:hint="@string/phone_optionnal"
                android:layout_below="@+id/popup_editText"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:inputType="phone" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/mac_address_textview"
                android:layout_below="@+id/popup_name_text"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:gravity="center|center_horizontal"
                android:text="@string/mac_address"
                android:textColor="@color/myBlue"
                android:textSize="16dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/mac_address_value"
                android:layout_below="@+id/popup_name_text"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:gravity="center|center_horizontal"
                android:textColor="@color/myBlue"
                android:textSize="15dp"
                android:layout_toRightOf="@+id/mac_address_textview" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:text="@string/ok"
                android:id="@+id/popup_ok_button"
                android:background="@color/myBlue"
                android:textColor="@color/myWhite"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="40dp"
                android:layout_alignParentLeft="true"
                android:visibility="visible"
                android:layout_alignParentBottom="true" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:text="@string/ignore"
                android:id="@+id/popup_ignore_button"
                android:background="@color/myBlue"
                android:textColor="@color/myWhite"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                android:layout_alignParentRight="true"
                android:layout_toRightOf="@+id/popup_ok_button"
                android:layout_marginRight="40dp"
                android:layout_alignParentBottom="true" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/popup_clear_data"
            android:background="#DDDDDD"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="190dp"
            android:layout_marginBottom="190dp"
            android:visibility="gone" >

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:text="@string/yes"
                android:id="@+id/popup_yes_button"
                android:background="@color/myBlue"
                android:textColor="@color/myWhite"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="50dp"
                android:layout_alignParentLeft="true"
                android:onClick="onClickYes"
                android:layout_alignParentBottom="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/popup_clear_data"
                android:id="@+id/popup_clear_data_textview"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textColor="@color/myBlue"
                android:textSize="15dp"
                android:gravity="center|center_horizontal" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:text="@string/no"
                android:id="@+id/popup_no_button"
                android:background="@color/myBlue"
                android:textColor="@color/myWhite"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                android:layout_alignParentRight="true"
                android:layout_toRightOf="@+id/popup_yes_button"
                android:layout_marginRight="50dp"
                android:onClick="onClickNo"
                android:layout_alignParentBottom="true" />
        </RelativeLayout>
    </android.support.v4.widget.DrawerLayout>

