<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.saadallah.synapps.NetworkDetails">

<RelativeLayout
    android:id="@+id/content_frame"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="All Database"
        android:id="@+id/txt_ReadAllData"
        android:textSize="12dp"
        android:layout_below="@+id/data_sorting_spinner"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:visibility="gone" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/data_sorting_spinner"
        android:layout_toRightOf="@+id/sort_data_by"
        android:entries="@array/spinner_sorting_choice"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/sort_data_by"
        android:id="@+id/sort_data_by"
        android:layout_alignBottom="@+id/data_sorting_spinner"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="#000000"
        android:layout_marginLeft="10dp" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/mydatalist"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/txt_ReadAllData"
        android:layout_marginTop="30dp" /><![CDATA[

    android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Drop Table"
        android:id="@+id/btndrop"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:onClick="btnonclickdrop" />
]]>
</RelativeLayout>

<RelativeLayout
    android:id="@+id/left_drawer"
    android:layout_width="220dp"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    android:orientation="vertical"
    android:background="@color/myWhite">


    <Switch
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/notifications"
        android:id="@+id/notif_switch"
        android:textColor="@color/myBlue"
        android:textSize="20sp"
        android:layout_below="@+id/updates_textview"
        android:layout_marginTop="5dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="25dp"
        android:textStyle="bold" />

    <Switch
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/bluetooth"
        android:id="@+id/bluetooth_switch"
        android:textColor="@color/myBlue"
        android:textSize="20sp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp"
        android:layout_below="@+id/connectivity_textview"
        android:textStyle="bold" />

    <Switch
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/wifidirect"
        android:id="@+id/wifi_switch"
        android:textColor="@color/myBlue"
        android:textSize="20sp"
        android:layout_below="@+id/bluetooth_switch"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connectivity"
        android:id="@+id/connectivity_textview"
        android:textColor="@color/myBlue"
        android:textSize="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/updates"
        android:id="@+id/updates_textview"
        android:textColor="@color/myBlue"
        android:layout_below="@+id/wifi_switch"
        android:textSize="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp" />

</RelativeLayout>


</android.support.v4.widget.DrawerLayout>



