<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/deviceName_value"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textStyle="bold"
        android:textColor="@color/myBlue"
        android:textSize="18dp"
        android:layout_marginLeft="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mac_address"
        android:id="@+id/mac_address"
        android:layout_below="@+id/deviceName_value"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/mac_address_value"
        android:layout_alignBottom="@+id/mac_address"
        android:layout_toRightOf="@+id/mac_address"
        android:layout_marginLeft="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detection_frequency"
        android:id="@+id/detection_fq"
        android:layout_below="@+id/phone_number"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/detection_fq_value"
        android:layout_alignBottom="@+id/detection_fq"
        android:layout_toRightOf="@+id/detection_fq"
        android:layout_toEndOf="@+id/deviceName_value"
        android:layout_marginLeft="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cumulative_time"
        android:id="@+id/cumulative_time"
        android:layout_below="@+id/detection_fq"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cumulative_time_value"
        android:layout_alignBottom="@+id/cumulative_time"
        android:layout_toRightOf="@+id/cumulative_time"
        android:layout_toEndOf="@+id/mac_address"
        android:layout_marginLeft="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last_time_detected"
        android:id="@+id/last_time_detection"
        android:layout_below="@+id/cumulative_time"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/last_time_detection_value"
        android:layout_toRightOf="@+id/last_time_detection"
        android:layout_toEndOf="@+id/cumulative_time"
        android:layout_alignBottom="@+id/last_time_detection"
        android:layout_marginLeft="5dp"
        android:textSize="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last_detection_range"
        android:id="@+id/last_time_range"
        android:layout_below="@+id/last_time_detection"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/last_time_range_value"
        android:layout_alignBottom="@+id/last_time_range"
        android:layout_toRightOf="@+id/last_time_range"
        android:layout_toEndOf="@+id/cumulative_time"
        android:layout_marginLeft="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_number"
        android:id="@+id/phone_number"
        android:layout_below="@+id/mac_address"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/phone_number_value"
        android:layout_toRightOf="@+id/phone_number"
        android:layout_toEndOf="@+id/phone_number"
        android:layout_alignBottom="@+id/phone_number"
        android:layout_marginLeft="5dp" />
</RelativeLayout>